--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,7 +4,7 @@
 body {
   font-family: 'Poppins', sans-serif;
   background-color: #000000; /* Fundo preto (dark mode) */
-  color: #ffffff; /* Texto branco */
+  color: #161212; /* Texto preto */
   margin: 0;
   padding: 0;
 }
